@@ -7,6 +7,7 @@ Please send bfast bug reports to nhomer@cs.ucla.edu
 
 Version 0.2.6
 * Fixed a bug in breport that caused memory leaks.
+* Added support to output unpaired reads in bpostprocess.
 
 Version 0.2.5
 * bpairedenddist now outputs to a file instead of stdout.
